# fusion-embedding-1

./: .env.example  .gitignore  LICENSE  README.md  modal_app.py  pyproject.toml
assets/: make_ember_figure.py  make_ember_gallery_figure.py  make_family_figures.py  make_model_overview_figures.py  make_positioning_figure.py
docs/: MODEL_CARD.md  master_hld.md
fe2_release/: README_hf.md  inference.py  mteb_wrapper.py  package_checkpoint.py
fusion_embedding/: README.md  __init__.py  _tiny.py  adapters.py  config.py  data.py  demo_stage1.py  gallery.py  hf_components.py  ingest_utils.py  losses.py  memory_bank.py  model.py  paths.py  speech_captions.py  train_stage1.py
release/: README_hf.md  inference.py  mteb_wrapper.py  package_checkpoint.py
release/remote_code/: configuration_fusion_embedding.py  modeling_fusion_embedding.py  out_fe1_config.json  out_fe2_config.json  validate_cpu.py
scripts/: arxiv_build_test.py  composability_matrix.py  fe2_v02_release_smoke.py  ingest_speech_delta.py  ir_td_download.py  maeb_fe2_run.py  maeb_fe2_v02_run.py  make_thermal_gallery.py  mveb_fe1_run.py  mveb_fe2_video_run.py  mveb_video_run.py  p0a_thermal_probe.py  p0b_thermal_gate.py  p0c_imu_probe.py  package_thermal_pack.py  remote_code_smoke.py  thermal_pack_hub_smoke.py  thermal_phase1.py
scripts/demo_space/: README_space.md  app.py  build_galleries.py  push_space.py  requirements.txt  smoke_space.py
tests/: conftest.py  test_adapters.py  test_config.py  test_corpus_bank.py  test_data.py  test_e2e.py  test_floor_audit.py  test_frames.py  test_ft_init.py  test_gallery.py  test_hf_components.py  test_ingest_utils.py  test_losses.py  test_max_frames_crop.py  test_memory_bank.py  test_model.py  test_qb_norm.py  test_relevance_loss.py  test_resampler.py  test_thermal_adapters.py  test_train.py  test_whitening.py
