[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-embedding"
version = "0.1.0"
description = "Fusion Embedding 1 — graft an audio pathway onto a frozen Qwen3-VL-Embedding base."
authors = [{ name = "Abdul Basit Tonmoy" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Real Qwen component loading (HLD §10 seams). Not needed for the CPU E2E tests.
hf = [
    "transformers>=4.46",
    "soundfile>=0.12",
    "librosa>=0.10",
]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["fusion_embedding*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
