[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-embedding"
version = "0.1.0"
description = "Fusion Embedding — audio pathway for a frozen Qwen3-VL-Embedding base (one space for text, image, video, audio)."
authors = [{ name = "Abdul Basit Tonmoy" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Real Qwen component loading (HLD §10 seams). Not needed for the CPU E2E tests.
hf = [
    "transformers>=4.46",
    "accelerate>=0.30",
    "bitsandbytes>=0.43; platform_system == 'Linux'",  # 4-bit frozen base (Linux/Modal)
    "soundfile>=0.12",
    "librosa>=0.10",
]
# Modal serverless GPU deployment (preprocess + train as Modal functions).
deploy = ["modal>=0.64"]

# Dev tooling — installed by default by `uv sync` (PEP 735 default group).
[dependency-groups]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["fusion_embedding*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# --- uv: pull torch from the CUDA cu124 index (RTX 4060 = Ada; also valid on Modal Linux).
#     Switch the URL to .../whl/cpu for a CPU-only box, or .../whl/cu126 etc. as needed.
[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
